fixed colors on mobile site

--- a/src/components/contact/contact-mobile/ContactMob.scss
+++ b/src/components/contact/contact-mobile/ContactMob.scss
@@ -14,7 +14,6 @@
   /* font-size: 14px; */
   font-size: 1.5em;
   font-weight: bold;
-  color: #34F5D7
 
 }
 
@@ -24,7 +23,6 @@
   border-bottom: solid 1px #ccc;
   padding: 1.5vw;
   width: 100%;
-  color: #34F5D7
 }
 
 .contact_item-mob input:hover, textarea:hover {
@@ -35,19 +33,16 @@
   display: block;
   // background-color: rgb(231, 255, 253);
   background-color: #f1f3f3;
-  color: #34F5D7
 }
 
 .contact_item-mob textarea {
   height: 10em;
   // background-color: rgb(231, 255, 253);
   background-color: #f1f3f3;
-  color: #34F5D7
 }
 
 .contact-heading-mob {
   text-align: center;
-  color: #34F5D7
 }
 
 .contact-mob h2 {
